@@ -18,3 +18,4 @@ depth: 1
  * Use consistent heading styles on top-level fields in the page editor (Sage Abdullah)
  * Allow button labels to wrap onto two lines in dropdown buttons (Coen van der Kamp)
  * Allow both horizontal and vertical manual resizing of TextFields (Anisha Singh)
+ * Move DateField, DateTimeField, TimeField comment buttons to be right next to the fields (Theresa Okoro)
